--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project-name",
+  "name": "Template Name",
   "version": "1.0.0",
-  "description": "Project Description",
+  "description": "Template description",
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp"
@@ -14,13 +14,15 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-changed": "^3.2.0",
-    "gulp-concat": "^2.6.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-file-include": "^2.0.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^5.0.3",
+    "gulp-merge-media-queries": "^0.2.1",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-pretty-html": "^2.0.9",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.0",
     "gutil": "^1.6.4",
