--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
-  "name": "template name",
+  "name": "gulp-package",
   "version": "1.0.0",
-  "description": "template description",
+  "description": "Gulp Pakage for all Hastech Employee",
   "main": "gulpfile.js",
   "scripts": {
-    "start": "gulp"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Rashed Mahmud",
-  "license": "MIT",
+  "author": "Hastech",
+  "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.18.13",
-    "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-beautify-code": "^2.0.3",
     "gulp-changed": "^3.2.0",
-    "gulp-csscomb": "^3.0.8",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.0.1",
-    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^5.0.3",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-pretty-html": "^2.0.9",
-    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.0",
-    "gutil": "^1.6.4",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.1",
+    "gulp-uglifycss": "^1.1.0",
     "imagemin-jpeg-recompress": "^6.0.0",
     "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-pngquant": "^7.0.0",
     "imagemin-svgo": "^7.0.0",
-    "vinyl-ftp": "^0.6.1"
-  },
-  "dependencies": {
-    "gulp-wait": "0.0.2"
+    "imagemin-upng": "^1.2.7"
   }
 }
