--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template-starter-gulp",
   "version": "1.0.0",
-  "description": "Gulp Pakage for HTML Templates",
+  "description": "Gulp Package for HTML Templates",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,13 +11,13 @@
   "devDependencies": {
     "browser-sync": "^2.18.13",
     "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-beautify-code": "^2.0.3",
-    "gulp-changed": "^3.2.0",
+    "gulp-changed": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.0.1",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-imagemin": "^6.1.1",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
