package name updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brenda-html",
+  "name": "project-html",
   "version": "1.0.0",
   "description": "Gulp Package for HTML Templates",
   "main": "gulpfile.js",
